--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -22,4 +22,4 @@ jobs:
           target_branch: output
           build_dir: dist
         env:
-          GITHUB_TOKEN: ${{ secrets.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 }}
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
